--- a/lib/src/coll/Makefile.am
+++ b/lib/src/coll/Makefile.am
@@ -10,7 +10,7 @@ if ENABLE_COLL
 libcoll_la_SOURCES = rbt.c rbt.h \
 		     htbl.c htbl.h \
 		     idx.c idx.h idx_priv.h \
-		     str_map.c str_map.h fnv_hash.h \
+		     str_map.c str_map.h fnv_hash.c fnv_hash.h \
 		     ovis-map.h ovis-map.c \
 		     label-set.h label-set.c \
 		     heap.c heap.h
