--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
@@ -655,19 +655,19 @@ generate_aggregator_config () {
 # extract schemas for a specific store from genders or environment
 # into a space separated list.
 get_schema_list () {
-	schema_host=$1
-	plugin=$2
+	local schema_host=$1
+	local plugin=$2
 	# string in gender is : separated list of schema names
 
 	# List of schemas specifically fed to plugin. if empty, use
 	# plugin names and ldmsd_schemas_extra values.
-	schemas=`$NODEATTR $NODEATTRFILE -v $schema_host ldmsd_schemas_${plugin} 2>/dev/null`
+	local schemas=`$NODEATTR $NODEATTRFILE -v $schema_host ldmsd_schemas_${plugin} 2>/dev/null`
 
 	# schemas not wanted on this plugin
-	badschemas=`$NODEATTR $NODEATTRFILE -v $schema_host ldmsd_exclude_schemas_${plugin} 2>/dev/null`
+	local badschemas=`$NODEATTR $NODEATTRFILE -v $schema_host ldmsd_exclude_schemas_${plugin} 2>/dev/null`
 
 	# schemas not wanted on any plugin
-	reallybadschemas=`$NODEATTR $NODEATTRFILE -v $schema_host ldmsd_exclude_schemas 2>/dev/null`
+	local reallybadschemas=`$NODEATTR $NODEATTRFILE -v $schema_host ldmsd_exclude_schemas 2>/dev/null`
 
 	if test -z "$schemas"; then
 		# by default give all schemas to every store unless listed in env.
@@ -685,12 +685,12 @@ get_schema_list () {
 	if test -n "$LDMSD_EXCLUDE_SCHEMA_LIST"; then
 		envbadschemas="$LDMSD_EXCLUDE_SCHEMA_LIST"
 	fi
-	excludelist="${envbadschemas},${badschemas},${reallybadschemas}"
-	keepfile=`mktemp $localstatedir/run/ldmsd/tmp/schemas.1.XXX`
-	badfile=`mktemp $localstatedir/run/ldmsd/tmp/schemas.2.XXX`
+	local excludelist="${envbadschemas},${badschemas},${reallybadschemas}"
+	local keepfile=`mktemp $localstatedir/run/ldmsd/tmp/schemas.1.XXX`
+	local badfile=`mktemp $localstatedir/run/ldmsd/tmp/schemas.2.XXX`
 	echo $schemas | tr ",: " "\n" | sort -u > $keepfile
 	echo $excludelist | tr ",: " "\n" | sort -u > $badfile
-	slist=`comm -23 $keepfile $badfile`
+	local slist=`comm -23 $keepfile $badfile`
 	if ! test "$DEBUG" = "yes"; then
 		/bin/rm -f $keepfile $badfile
 	fi
