Adding chkmeminfo config of meminfo for corruption detection
If the meminfo read loop gets longer (new lines dynamically in
/proc/meminfo, this is now detected and an error produced.

The high bits of the u64 metrics carry the metric index.
The very high bits carry the local sample invocation count mod 1000.
Any inconsistency in these bits within a set indicate insanity.
Sequential inconsistency (other than a restart) across sets from
the same producer indicate insanity.

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -130,6 +130,11 @@ if ENABLE_MEMINFO
 libmeminfo_la_SOURCES = meminfo.c
 libmeminfo_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS)
 pkglib_LTLIBRARIES += libmeminfo.la
+
+libchkmeminfo_la_SOURCES = meminfo.c
+libchkmeminfo_la_CFLAGS = $(AM_CFLAGS) -DCHKMEMINFO
+libchkmeminfo_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS)
+pkglib_LTLIBRARIES += libchkmeminfo.la
 endif
 
 if ENABLE_MSR_INTERLAGOS
