add LDMS_ENABLE_MMALLOC_DEBUG env var test to bypass mmap
This enables debugging memory operations where errors are normally
masked by the mmalloc pool. transports (ugni) which require mmapped
addresses will not work with this enabled. works with sock and
ib rdma. This also include the mmalloc test code in the default build.
Needs to be enabled with --mmdebug configure option in both lib and
ldms and then activated by setting LDMS_ENABLE_MMALLOC_DEBUG.
Static test 'many' is included  which loads multiple samplers.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -52,6 +52,11 @@ OVIS_PKGLIBDIR
 OPTION_DEFAULT_ENABLE([scripts], [ENABLE_SCRIPTS])
 OPTION_DEFAULT_DISABLE([slurmtest], [ENABLE_SLURMTEST])
 OPTION_DEFAULT_DISABLE([developer], [ENABLE_DEVELOPER])
+OPTION_DEFAULT_DISABLE([mmdebug], [ENABLE_MM_DEBUG])
+if test "$enable_mmdebug" == "yes"; then
+	AC_DEFINE([MM_DEBUG],[1],
+		["enable mmalloc debug (and disable mmap) to be controlled by env(LDMS_ENABLE_MMALLOC_DEBUG)"])
+fi
 OPTION_DOC
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 
