--- a/ldms/scripts/pll-ldms-static-test.sh.in
+++ b/ldms/scripts/pll-ldms-static-test.sh.in
@@ -2,7 +2,13 @@
 #
 # This tests ldmsd run with static config files (as would normally
 # happen as a system service) and shut down with a signal.
-# all daemons run on the same node as this script.
+# This version is slurm aware and only does things when the daemon
+# number matches (1+$SLURM_PROCID).
+# This version expects the caller to prepopulate a file named in
+# env(TEST_HOSTFILE) with initialization of the hostnames
+# for the daemon numbers.
+# All actions are unlooped from the implementation viewpoint, because
+# slurm executes this NTASKS times.
 #
 bypass=0
 if test -z "$allowroot"; then
@@ -16,7 +22,7 @@ export pkglibdir=@pkglibdir@
 export PACKAGE_TARNAME=@PACKAGE_TARNAME@
 export docdir=@docdir@
 export exdir=@docdir@-@PACKAGE_VERSION@
-
+	
 if ! test -f $libdir/ovis-lib-configvars.sh; then
 	echo "$libdir/ovis-lib-configvars.sh not found"
 	exit 1
@@ -42,10 +48,11 @@ cat << EOF
 $0: usage:
 $0 -l 
 $0 -h
+$0 -b <input_file>
 $0 <input_file> [test_dir]
 	-h produces help message
 	-l produces list of canned test names
-See man ldms-static-test(8) for details.
+See man pll-ldms-static-test(8) for details.
 EOF
 }
 input=$1
@@ -60,13 +67,18 @@ if test "$1" = "-h"; then
 fi
 if test "$1" = "-l"; then
 	echo "Canned tests are:"
-	echo "$exdir/examples/static-test/"
-	(cd $exdir/examples/static-test; cat .canned)
+	echo "$exdir/examples/slurm-test/"
+	(cd $exdir/examples/slurm-test; cat .canned)
+	exit 0
+fi
+if test "$1" = "-b"; then
+	# >&2 echo "Canned test batch script for $2 should be:"
+	echo "$exdir/examples/slurm-test/sbatch.$2"
 	exit 0
 fi
 if test $(basename $1) = $1 -a ! -f $1; then
-	if test -f $exdir/examples/static-test/$1; then
-		input=$exdir/examples/static-test/$1
+	if test -f $exdir/examples/slurm-test/$1; then
+		input=$exdir/examples/slurm-test/$1
 	fi
 fi
 if ! test -f $input -a -r $input; then
@@ -74,6 +86,12 @@ if ! test -f $input -a -r $input; then
 	exit 1
 fi
 export testname=`basename $1`
+if ! test "x$SLURM_PROCID" = "x"; then
+	export myproc=$(($SLURM_PROCID + 1))
+else
+	echo "$0: must be run under slurm"
+	exit 1
+fi
 # get_prolog_name insertfile basefile
 # find prolog file in . or adjacent to basefile
 # or in standard directory
@@ -88,8 +106,8 @@ function get_prolog_name () {
 	# check unqualified path names not existing in pwd
 	if test $(basename $pfile) = $pfile -a ! -f $pfile; then
 		# in standard place?
-		if test -f $exdir/examples/static-test/$pfile; then
-			rfile=$exdir/examples/static-test/$pfile
+		if test -f $exdir/examples/slurm-test/$pfile; then
+			rfile=$exdir/examples/slurm-test/$pfile
 		fi
 		if test -n "$2"; then
 			basedir=$(dirname $basefile)
@@ -99,7 +117,7 @@ function get_prolog_name () {
 		fi
 	fi
 	if ! test -f $rfile -a -r $rfile; then
-		echo "FAIL: cannot find test prolog $pfile in . $exdir/examples/static-test or next to $basefile."
+		echo "FAIL: $myproc: cannot find test prolog $pfile in . $exdir/examples/slurm-test or next to $basefile."
 		rfile=""
 		exit 1
 	fi
@@ -109,7 +127,7 @@ function get_prolog_name () {
 TESTDIR=$2
 
 if test -z "$2"; then
-	TESTDIR=`pwd`/ldmstest/$testname
+	TESTDIR=`pwd`/ldmstest/$testname/$SLURM_JOBID.$SLURM_CLUSTER_NAME.$SLURM_JOB_NUM_NODES
 fi
 export TESTDIR
 
@@ -117,6 +135,38 @@ if test -z "$XPRT"; then
 	export XPRT=sock
 fi
 declare -a ports
+declare -a hosts
+
+# get the slurm job time remaining in seconds,
+# of if not set or unlimited, returns 600 (10 min)
+# if error in getting/parsing time, returns 10.
+# d-h:m:s
+# h:m:s
+# m:s
+shopt -s extglob
+function SEC_LEFT {
+	jt_left=$(squeue -h -j $SLURM_JOBID -o "%L")
+	jt_sec=600
+	case $jt_left in
+	NOTSET)
+		;;
+	UNLIMITED)
+		;;
+	+([0-9])-+([0-9]):+([0-9]):+([0-9]))
+		jt_sec=$(echo "$jt_left" | awk -F':' '{print $1 *86400 + $2 * 60 * 60 + $3 * 60 + $4}')
+		;;
+	+([0-9]):+([0-9]):+([0-9]))
+		jt_sec=$(echo "$jt_left" | awk -F':' '{print $1 * 60 * 60 + $2 * 60 + $3}')
+		;;
+	+([0-9]):+([0-9]))
+		jt_sec=$(echo "$jt_left" | awk -F':' '{print $1 * 60 + $2}')
+		;;
+	*)
+		jt_sec=10
+		;;
+	esac
+	echo $jt_sec
+}
 
 # turn on valgrind usage in ldmsd and ldms_ls.
 # VG and VGARGS may be specified to override the default
@@ -133,16 +183,27 @@ function vgoff {
 }
 
 # clear old daemons in the range we're expected and define the
-# port variables.
+# port variables. The ports are defined sequentially.
+# The hosts come from slurm.
+# More DAEMONS than tasks is an error.
 did_daemons=0
 function DAEMONS {
 	if test $did_daemons = "1"; then
 		return
 	fi
 	for i in $*; do
-		/bin/rm -f ${LOGDIR}/$i.txt ${LOGDIR}/vg.$i
 		ports[$i]=$(($portbase + $i))
 		eval export port$i=${ports[$i]}
+		if test $i -ne $myproc; then
+			continue
+		fi
+		if test $i -gt $SLURM_NTASKS; then
+			echo "FAIL: DAEMON $i too big for SLURM_NTASKS=$SLURM_NTASKS"
+			bypass=1
+			return
+		fi
+			
+		/bin/rm -f ${LOGDIR}/$i.txt ${LOGDIR}/vg.$i
 		binname=ldmsd.${ports[$i]}
 		pkill -9 $binname
 		/bin/rm -f $LDMSD_RUN/$binname
@@ -159,7 +220,7 @@ function DAEMONS {
 # ${i} will be exported to the environment of ldmsd.
 function LDMSD {
 	if test "$bypass" = "1"; then
-		echo skipping sleep
+		echo $myproc: skipping sleep
 		return 0
 	fi
 	prologs=""
@@ -167,6 +228,7 @@ function LDMSD {
 	bug=0
 	local OPTIND
 	local cloneinput=0
+	local first=""
 	startwait=2000000
 	while getopts ":p:P:s:c" opt; do
 		case $opt in
@@ -174,7 +236,7 @@ function LDMSD {
 			f="$OPTARG"
 			prologs="$prologs $OPTARG"
 			if test "${f:0:1}" = "-"; then
-				echo "LDMSD: -p expected filename"
+				echo "LDMSD: $myproc: -p expected filename"
 				file=""
 				bug=2
 				((OPTIND--))
@@ -188,7 +250,7 @@ function LDMSD {
 			# tmp result in prologs list
 			loopprologs="$loopprologs $OPTARG"
 			if test "${f:0:1}" = "-"; then
-				echo "LDMSD: -P expected filename,PLIST"
+				echo "LDMSD: $myproc: -P expected filename,PLIST"
 				file=""
 				bug=2
 				((OPTIND--))
@@ -197,13 +259,14 @@ function LDMSD {
 		c)
 			cloneinput=1;
 			# recycle input to list of similar daemons
-			# after all prolog processing is done
+			# after all prolog processing is done.
+			# in this (pll) case, clones must assemble anyway.
 			;;
 		s)
 			startwait="$OPTARG";
 			;;
 		\?)
-			echo "Invalid option: -$OPTARG" >&2
+			echo "Invalid option: $myproc: -$OPTARG" >&2
 			bug=1
 			;;
 		esac
@@ -214,9 +277,15 @@ function LDMSD {
 	fi
 
 	DAEMONS $*
+	if test "x$cloneinput" = "x1"; then
+		first=$1
+	fi
 	clonefile=""
 	for i in $*; do
 		export i
+		if test $i -ne $myproc; then
+			continue
+		fi
 		if test "$usevg" = "1"; then
 			if test -z "$VG"; then
 				XVG=valgrind
@@ -232,8 +301,12 @@ function LDMSD {
 		else
 			wrap=""
 		fi
-		echo starting daemon $i
-		if test -f $input.$i -a -r $input.$i; then
+		if test -n "$first"; then
+			insuff=$first
+		else
+			insuff=$i
+		fi
+		if test -f $input.$insuff -a -r $input.$insuff ; then
 			echo "# generated from $input" > $LDMSD_RUN/conf.$i
 			for lf in $loopprologs; do
 				loopfile=0
@@ -253,9 +326,10 @@ function LDMSD {
 				echo "# prolog from $pfn" >> $LDMSD_RUN/conf.$i
 				cat $pfn >> $LDMSD_RUN/conf.$i
 			done
-			echo "# generated from $input.$i" >> $LDMSD_RUN/conf.$i
-			cat $input.$i >> $LDMSD_RUN/conf.$i
+			echo "# generated from $input.$insuff" >> $LDMSD_RUN/conf.$i
+			cat $input.$insuff >> $LDMSD_RUN/conf.$i
 			clonefile=$LDMSD_RUN/conf.$i
+			echo $myproc: starting daemon $i
 			$wrap ldmsd.${ports[$i]} \
 				-x ${XPRT}:${ports[$i]} \
 				-c $LDMSD_RUN/conf.$i \
@@ -263,11 +337,9 @@ function LDMSD {
 				-v DEBUG $LDMSD_EXTRA \
 				-r $LDMSD_PIDFILE.$i
 		else
-			if test -z "$clonefile"; then
-				echo MISSING input file for DAEMON $i
-			fi
 			if test -f $clonefile -a $cloneinput = "1"; then
 				cp $clonefile $LDMSD_RUN/conf.$i
+				echo $myproc: starting daemon $i
 				$wrap ldmsd.${ports[$i]} \
 					-x ${XPRT}:${ports[$i]} \
 					-c $LDMSD_RUN/conf.$i \
@@ -275,7 +347,7 @@ function LDMSD {
 					-v DEBUG $LDMSD_EXTRA \
 					-r $LDMSD_PIDFILE.$i
 			else
-				echo IDLE DAEMON $i
+				echo $myproc: IDLE DAEMON $i
 				ldmsd.${ports[$i]} -x ${XPRT}:${ports[$i]} \
 					-l ${LOGDIR}/$i.txt \
 					-v DEBUG \
@@ -284,7 +356,7 @@ function LDMSD {
 		fi
 		usleep $startwait
 		if ! test -f $LDMSD_PIDFILE.$i; then
-			echo FAIL: failed to start $i. check ${LOGDIR}/$i.txt
+			echo FAIL: $myproc: failed to start $i. check ${LOGDIR}/$i.txt
 			bypass=1
 			break;
 		fi
@@ -296,7 +368,7 @@ function MESSAGE  {
 	if test "$bypass" = "1"; then
 		return 0
 	fi
-	echo $*
+	echo ${myproc}: $*
 }
 
 #
@@ -307,6 +379,9 @@ function LDMS_LS {
 	nodes=$1
 	shift
 	for i in $nodes; do
+		if test $i -ne $myproc; then
+			continue
+		fi
 		if test "$usevg" = "1"; then
 			if test -z "$VG"; then
 				VG=valgrind
@@ -319,20 +394,24 @@ function LDMS_LS {
 			wrap=""
 		fi
 		if ! test -f "$LDMSD_PIDFILE.$i"; then
-			echo FAIL: ls of missing daemon $i skipped. check ${LOGDIR}/$i.txt
+			echo FAIL: $myproc: ls of missing daemon $i skipped. check ${LOGDIR}/$i.txt
 			bypass=1
 			break;
 		fi
+		# could use ${hosts[$i]} here but don't need to.
 		$wrap ldms_ls  -h localhost -x sock -p ${ports[$i]} $*
 	done
 }
 # KILL_LDMSD num list
 function KILL_LDMSD {
 	for i in $*; do
+		if test $i -ne $myproc; then
+			continue
+		fi
 		if test -f $LDMSD_PIDFILE.$i; then
 			kill -SIGTERM `cat $LDMSD_PIDFILE.$i`
 		else
-			echo cannot find pidfile for $i
+			echo $myproc: cannot find pidfile for $i
 		fi
 	done
 }
@@ -341,36 +420,54 @@ function rollover_created {
 	if test "$bypass" = "1"; then
 		return 0
 	fi
-	x=`ls $1.[0-9]*`
-	if test -z "$x"; then
-		echo "FAIL: roll-over files $1.* not created."
-		bypass=1
-		return 1
-	fi
-	for i in $x; do
-		if ! test -r $i; then
-			echo FAIL: file $i not readable.
+	local file=$1
+	shift
+	local x
+	local i
+	local k
+	for i in $*; do
+		if test $i -ne $myproc; then
+			continue
+		fi
+		x=`ls ${file}.[0-9]*`
+		if test -z "$x"; then
+			echo "FAIL: $myproc: roll-over files $file.* not created."
 			bypass=1
 			return 1
 		fi
+		for k in $x; do
+			if ! test -r $k; then
+				echo FAIL: $myproc: file $k not readable.
+				bypass=1
+				return 1
+			fi
+		done
+		return 0
 	done
-	return 0
 }
+
 function file_created {
 	if test "$bypass" = "1"; then
 		return 0
 	fi
-	if ! test -f $1; then
-		echo FAIL: file $1 not created.
-		bypass=1
-		return 1
-	fi
-	if ! test -r $1; then
-		echo FAIL: file $1 not readable.
-		bypass=1
-		return 1
-	fi
-	return 0
+	local file=$1
+	shift
+	for i in $*; do
+		if test $i -ne $myproc; then
+			continue
+		fi
+		if ! test -f $file; then
+			echo FAIL: $myproc: file $file not created.
+			bypass=1
+			return 1
+		fi
+		if ! test -r $file; then
+			echo FAIL: $myproc: file $file not readable.
+			bypass=1
+			return 1
+		fi
+		return 0
+	done
 }
 # pause some seconds
 function SLEEP() {
@@ -378,9 +475,9 @@ function SLEEP() {
 		echo skipping sleep
 		return 0
 	fi
-	echo -n sleep $1 ...
+	echo -n $myproc: sleep $1 ...
 	sleep $1
-	echo done
+	echo $myproc: done
 }
 
 # generate a jobinfo file
@@ -400,6 +497,9 @@ EOF
 }
 
 function JOBDATA () {
+# this fires on all nodes
+# last one wins, but file system results should be identical
+# even if the output fs is shared.
 if test "$#" = "1"; then
 	job_vals $1
 	return
@@ -410,8 +510,6 @@ for i in $*; do
 	job_vals $f.$i
 done
 }
-
-
 
 portbase=61100
 if test ! -x $BUILDDIR/sbin/ldmsd; then
@@ -438,28 +536,32 @@ export STOREDIR=$TESTDIR/store
 export SOCKDIR=$TESTDIR/run/ldmsd
 export LOGDIR=$TESTDIR/logs
 export LDMSD_PIDFILE=$TESTDIR/run/ldmsd.pid
-SECRET=$SOCKDIR/secret
+SECRET=$SOCKDIR/secret.$SLURM_JOBID
 export TSAN_OPTIONS=verbosity=1:log_path=$LOGDIR:strip_path_prefix=$prefix
 export ASAN_OPTIONS=verbosity=1:log_path=$LOGDIR:detect_stack_use_after_return=1:detect_leaks=1:strip_path_prefix=$prefix
 export LDMSD_RUN=${TESTDIR}/run
 mkdir -p $STOREDIR $SOCKDIR $LOGDIR $LDMSD_RUN
-echo "secretword="`openssl rand -hex 16` > $SECRET
+if test $myproc -eq 1; then
+	echo "secretword="`openssl rand -hex 16` > $SECRET
+	chmod go-rwx $SECRET
+	echo $myproc: removing old output
+	rm -rf ${STOREDIR}/*
+	echo "$myproc: logs and data stored under $TESTDIR"
+else
+	while [ ! -f $SECRET ]; do usleep 1000; done
+	# if your system has no usleep, replace usleep 1000 with sleep 1
+fi
 export LDMS_AUTH_FILE=$SECRET
 chmod go-rwx $SECRET
-echo "logs and data stored under $TESTDIR"
-
 export PATH=$LDMSD_RUN:${BUILDDIR}/sbin:${BUILDDIR}/bin:$PATH
 
-echo "Listing ldmsd's still running:"
+echo "$myproc: Listing ldmsd's still running:"
 pgrep ldmsd
-echo "Done."
-echo "logs and data stored under $TESTDIR"
-
-echo removing old output
-rm -rf ${STOREDIR}/*
+echo "$myproc: Done."
+echo "$myproc: logs and data stored under $TESTDIR"
 
 . $input
 
 SLEEP 1
-echo "logs and data stored under $TESTDIR"
+echo "$myproc: logs and data stored under $TESTDIR"
 echo done;
