--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -50,6 +50,7 @@ test "$sharedstatedir" = '${prefix}/com' && sharedstatedir='${prefix}/var/lib'
 
 OVIS_PKGLIBDIR
 OPTION_DEFAULT_ENABLE([scripts], [ENABLE_SCRIPTS])
+OPTION_DEFAULT_DISABLE([slurmtest], [ENABLE_SLURMTEST])
 OPTION_DEFAULT_DISABLE([developer], [ENABLE_DEVELOPER])
 OPTION_DOC
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
