--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.agg.conf
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.agg.conf
@@ -5,7 +5,11 @@ LDMS_AUTH_FILE=
 # See man ldmsd-genders(8) for details.
 # LDMSCLUSTER=remotename
 # LDMS_GENDERS="/etc/sysconfig/ldms.d/ClusterGenders/genders.agg"
-# LDMS_LOG_PATH=/path/file
+# LDMS_GENDERS_1="/etc/sysconfig/ldms.d/ClusterGenders/genders.local"
+# directory where the log ldmsd.agg.log will go, or 'syslog'
+# LDMS_LOG_PATH=/var/log/ldms-clusters
+# LDMSD_DEBUG_CONFIG_FILE=/etc/sysconfig/ldms.d/debug/ldmsd.extra.local.conf
+#
 # LDMSAGGD_MEM_RES=
 # LDMSD_EVENT_THDS=
 # LDMSD_USE_UNIX_SOCK=
