--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.local.conf
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.local.conf
@@ -25,6 +25,9 @@ LDMS_AUTH_FILE=
 # Variable overriding the use of attributes entirely for plugin configuration.
 # If defined, only this file is used for plugin configuration:
 # LDMSD_PLUGIN_CONFIG_FILE=
+#
+# If defined, append this file to the generated plugin configuration
+# LDMSD_DEBUG_CONFIG_FILE=/etc/sysconfig/ldms.d/debug/ldmsd.extra.local.conf
 
 # sampler related overrides
 # LDMSD_METRIC_PLUGINS=
